--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 
 jobs:
   include:
-    - name: "Linux AMD64 Build"
+    - name: "Linux AMD64 C Build"
       arch: amd64
       os: linux
       dist: bionic
@@ -27,7 +27,7 @@ jobs:
         - make -C test_problems test_d_part_cond_qcqp TARGET=AVX BLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo PRINT=0
         - make -C test_problems test_d_tree_ocp TARGET=AVX BLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo PRINT=0
 
-    - name: "Linux ARM64 Build"
+    - name: "Linux ARM64 C Build"
       arch: arm64
       os: linux
       dist: bionic
@@ -46,4 +46,23 @@ jobs:
         - make -C test_problems test_d_part_cond TARGET=GENERIC BLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo PRINT=0
         - make -C test_problems test_d_part_cond_qcqp TARGET=GENERIC BLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo PRINT=0
         - make -C test_problems test_d_tree_ocp TARGET=GENERIC BLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo PRINT=0
+
+    - name: "Linux AMD64 octave Build"
+      arch: amd64
+      os: linux
+      dist: bionic
+      group: travis_latest
+      addons:
+        apt:
+          packages:
+          - octave
+          - liboctave-dev
+      env:
+        - HPIPM_MAIN_FOLDER="${TRAVIS_BUILD_DIR}"
+      install:
+        - git clone https://github.com/giaf/blasfeo
+        - make -C "${TRAVIS_BUILD_DIR}"/blasfeo static_library TARGET=X64_INTEL_HASWELL LA=HIGH_PERFORMANCE -j 4
+      script:
+        - make static_library TARGET=AVX BLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo -j 4
+        - echo "HPIPM_MAIN_FOLDER=$HPIPM_MAIN_FOLDER"
 
