--- a/examples/matlab_octave/Makefile
+++ b/examples/matlab_octave/Makefile
@@ -34,6 +34,9 @@
 ###################################################################################################
 
 
+all:
+	octave-cli getting_started.m
+
 clean:
 	rm -f *.c
 	rm -f *.o
