--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ jobs:
         - echo "ENV_RUN=$ENV_RUN"
         - make -C interfaces/matlab_octave/ all -j 4
         - make -C examples/matlab_octave/ example_getting_started
-        - make -C examples/matlab_octave/ example_from_qp_data
+        - make -C examples/matlab_octave/ example_from_qp_data_c
         - make -C examples/matlab_octave/ example_mass_spring
         - make -C examples/matlab_octave/ example_mass_spring_qcqp
 
