travis: add python example

--- a/interfaces/python/Makefile
+++ b/interfaces/python/Makefile
@@ -33,6 +33,5 @@
 #                                                                                                 #
 ###################################################################################################
 
-
 all:
-	python example_getting_started.py
+	cd hpipm_python ; pip install . ; cd ..
