--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ jobs:
       os: linux
       dist: bionic
       group: travis_latest
+      addons:
+        apt:
+          packages:
+          - bc
       install:
         - git clone https://github.com/giaf/blasfeo
         - make -C "${TRAVIS_BUILD_DIR}"/blasfeo static_library TARGET=X64_INTEL_HASWELL LA=HIGH_PERFORMANCE -j 4
@@ -32,6 +36,10 @@ jobs:
       os: linux
       dist: bionic
       group: travis_latest
+      addons:
+        apt:
+          packages:
+          - bc
       install:
         - git clone https://github.com/giaf/blasfeo
         - make -C "${TRAVIS_BUILD_DIR}"/blasfeo static_library TARGET=ARMV8A_ARM_CORTEX_A57 LA=HIGH_PERFORMANCE -j 4
@@ -57,6 +65,7 @@ jobs:
           packages:
           - octave
           - liboctave-dev
+          - bc
       env:
         - HPIPM_MAIN_FOLDER=${TRAVIS_BUILD_DIR}
         - BLASFEO_MAIN_FOLDER=${TRAVIS_BUILD_DIR}/blasfeo
@@ -85,6 +94,10 @@ jobs:
       os: linux
       dist: bionic
       group: travis_latest
+      addons:
+        apt:
+          packages:
+          - bc
       language: python
       python: "3.6"
       env:
