working on casadi_python example

--- a/examples/casadi_python/Makefile
+++ b/examples/casadi_python/Makefile
@@ -42,6 +42,11 @@ PYTHON_VERSION_MINOR := $(word 2,${PYTHON_VERSION_FULL})
 #PYTHON_VERSION_PATCH := $(word 3,${PYTHON_VERSION_FULL})
 
 PYTHON_VERSION = $(PYTHON_VERSION_MAJOR)$(PYTHON_VERSION_MINOR)
+# TODO fallback to supported versions in casadi: 27, 35, 36, 37
+#PYTHON_VERSION = 27
+#PYTHON_VERSION = 35
+#PYTHON_VERSION = 36
+#PYTHON_VERSION = 37
 
 CASADI_VERSION = 3.5.1
 CASADI_GITHUB_RELEASES = https://github.com/casadi/casadi/releases/download/$(CASADI_VERSION)
