fix pythonpath env name

--- a/.travis.yml
+++ b/.travis.yml
@@ -99,12 +99,12 @@ jobs:
           packages:
           - bc
       language: python
-      python: "3.5"
+      python: "3.6"
       env:
         - HPIPM_MAIN_FOLDER=${TRAVIS_BUILD_DIR}
         - BLASFEO_MAIN_FOLDER=${TRAVIS_BUILD_DIR}/blasfeo
         - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HPIPM_MAIN_FOLDER/lib:$BLASFEO_MAIN_FOLDER/lib
-        - PYTHON_PATH=$PYTHON_PATH:$HPIPM_MAIN_FOLDER/examples/casadi_python/casadi
+        - PYTHONPATH=$PYTHONPATH:$HPIPM_MAIN_FOLDER/examples/casadi_python/casadi
         - ENV_RUN=true
         - TRAVIS_RUN=true
       install:
@@ -115,7 +115,7 @@ jobs:
         - echo "HPIPM_MAIN_FOLDER=$HPIPM_MAIN_FOLDER"
         - echo "BLASFEO_MAIN_FOLDER=$BLASFEO_MAIN_FOLDER"
         - echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH"
-        - echo "PYTHON_PATH=$PYTHON_PATH"
+        - echo "PYTHONPATH=$PYTHONPATH"
         - echo "ENV_RUN=$ENV_RUN"
         - make -C interfaces/python/ all
         - make -C examples/python/ example_qp_getting_started
