--- a/Makefile.external_blas
+++ b/Makefile.external_blas
@@ -33,58 +33,25 @@
 #                                                                                                 #
 ###################################################################################################
 
-include ../Makefile.rule
-include ../Makefile.external_blas
+LIBS_EXTERNAL_BLAS = 
 
-PRINT = 1
-CFLAGS += -DPRINT=$(PRINT)
+ifeq ($(REF_BLAS), 0)
+LIBS_EXTERNAL_BLAS += -lm 
+endif
+ifeq ($(REF_BLAS), OPENBLAS)
+LIBS_EXTERNAL_BLAS += /opt/openblas/lib/libopenblas.a -pthread -lgfortran -lm
+endif
+ifeq ($(REF_BLAS), BLIS)
+LIBS_EXTERNAL_BLAS += /opt/netlib/liblapack.a /opt/blis/lib/libblis.a -lgfortran -lm -fopenmp
+endif
+ifeq ($(REF_BLAS), NETLIB)
+LIBS_EXTERNAL_BLAS += /opt/netlib/liblapack.a /opt/netlib/libblas.a -lgfortran -lm
+endif
+ifeq ($(REF_BLAS), MKL)
+LIBS_EXTERNAL_BLAS += -Wl,--start-group /opt/intel/mkl/lib/intel64/libmkl_gf_lp64.a /opt/intel/mkl/lib/intel64/libmkl_core.a /opt/intel/mkl/lib/intel64/libmkl_sequential.a -Wl,--end-group -ldl -lpthread -lm
+endif
+ifeq ($(REF_BLAS), ATLAS)
+LIBS_EXTERNAL_BLAS += /opt/atlas/lib/liblapack.a /opt/atlas/lib/libcblas.a /opt/atlas/lib/libf77blas.a /opt/atlas/lib/libatlas.a -lgfortran -lm
+endif
 
-LIBS = $(TOP)/lib/libhpipm.a $(BLASFEO_PATH)/lib/libblasfeo.a $(LIBS_EXTERNAL_BLAS)
-
-
-### select one single test ###
-
-#OBJS_TEST = d_tools.o test_d_cond.o
-#OBJS_TEST = d_tools.o test_d_cond_qcqp.o
-#OBJS_TEST = d_tools.o test_d_cast_qcqp.o
-#OBJS_TEST = d_tools.o test_d_part_cond.o
-#OBJS_TEST = d_tools.o test_d_part_cond_qcqp.o
-#OBJS_TEST = test_d_dense.o
-#OBJS_TEST = test_d_dense_qcqp.o
-OBJS_TEST = d_tools.o test_d_ocp.o
-#OBJS_TEST = d_tools.o test_d_ocp_qcqp.o
-#OBJS_TEST = d_tools.o test_d_ocp_phase_I.o
-#OBJS_TEST = d_tools.o test_d_tree_ocp.o
-
-obj: $(OBJS_TEST)
-	$(CC) -o test.out $(OBJS_TEST) $(LIBS) #-pg
-
-
-### all individual tests ###
-
-# mass spring system
-test_d_ocp \
-test_d_ocp_qcqp \
-test_d_cond \
-test_d_cond_qcqp \
-test_d_part_cond \
-test_d_part_cond_qcqp \
-test_d_tree_ocp \
-: %: d_tools.o %.o
-	$(CC) -o $@.out $^ $(LIBS)
-	./$@.out
-
-# stand-alone
-test_d_dense \
-test_d_dense_qcqp \
-: %: %.o
-	$(CC) -o $@.out $< $(LIBS)
-	./$@.out
-
-
-### clean ###
-clean:
-	rm -f *.o
-	rm -f *.out
-	rm -f libhpipm.a
 
