--- a/examples/c/Makefile
+++ b/examples/c/Makefile
@@ -41,11 +41,11 @@ LIBS = $(TOP)/lib/libhpipm.a $(BLASFEO_PATH)/lib/libblasfeo.a $(LIBS_EXTERNAL_BL
 
 ### select data file ###
 
-OCP_QP_DATA = data/getting_started_data.o 
+#OCP_QP_DATA = data/getting_started_data.o 
 #OCP_QP_DATA = data/ocp_qp_data.o 
-#OCP_QP_DATA = ../matlab_octave/ocp_qp_data.o
+OCP_QP_DATA = ../matlab_octave/ocp_qp_data.o
 #OCP_QP_DATA = ../python/ocp_qp_data.o
-OCP_QCQP_DATA = data/pmsm_ocp_qcqp_data.o 
+OCP_QCQP_DATA = data/pmsm_ocp_qcqp_data.o
 #OCP_QCQP_DATA = data/ocp_qcqp_data.o 
 
 
