cmake: BLASFEO_INCLUDE_DIR configurable (#80)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ if(NOT TARGET blasfeo)
 endif()
 
 # Needed to compile examples
-set(BLASFEO_INCLUDE_DIR "${BLASFEO_PATH}/include")
+set(BLASFEO_INCLUDE_DIR "${BLASFEO_PATH}/include" CACHE STRING "Path to BLASFEO header files.")
 set(HPIPM_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 
 # headers installation directory
@@ -302,11 +302,13 @@ file(GLOB SIM_SRC
 set(HPIPM_SRC ${COND_SRC} ${DENSE_QP_SRC} ${IPM_CORE_SRC} ${OCP_QP_SRC} ${TREE_OCP_QP_SRC} ${AUXILIARY_SRC})
 
 add_library(hpipm ${HPIPM_SRC})
+
 target_include_directories(hpipm
 	PUBLIC
 		$<BUILD_INTERFACE:${HPIPM_INCLUDE_DIR}>
 		$<BUILD_INTERFACE:${BLASFEO_INCLUDE_DIR}>
 		$<INSTALL_INTERFACE:${HPIPM_HEADERS_INSTALLATION_DIRECTORY}>)
+
 target_link_libraries(hpipm blasfeo)
 
 install(TARGETS hpipm EXPORT hpipmConfig
@@ -325,3 +327,4 @@ if(HPIPM_TESTING MATCHES ON)
 endif()
 
 message(STATUS "Using BLASFEO path: ${BLASFEO_PATH}")
+message(STATUS "Installation directory: ${CMAKE_INSTALL_PREFIX}")
