--- a/.travis.yml
+++ b/.travis.yml
@@ -123,3 +123,47 @@ jobs:
         - make -C examples/casadi_python/ get_casadi
         - make -C examples/casadi_python/ example_PMSM
 
+  include:
+    - name: "Linux AMD64 cmake build"
+      arch: amd64
+      os: linux
+      dist: bionic
+      group: travis_latest
+      addons:
+        apt:
+          packages:
+          - bc
+      install:
+        - git clone https://github.com/giaf/blasfeo
+        - mkdir "${TRAVIS_BUILD_DIR}"/blasfeo/build
+        - cd "${TRAVIS_BUILD_DIR}"/blasfeo/build
+        - cmake -DCMAKE_INSTALL_PREFIX="${TRAVIS_BUILD_DIR}" ..
+        - make -j 4
+      script:
+        - mkdir "${TRAVIS_BUILD_DIR}"/build
+        - cd "${TRAVIS_BUILD_DIR}"/build
+        - cmake -DBLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo ..
+        - make -j 4
+        - cd test_problems
+        - ./d_ocp_qp
+
+  include:
+    - name: "Windows AMD64 cmake build"
+      if: branch = windows_support
+      os: windows
+      language: bash
+      group: travis_latest
+      install:
+        - export PATH="/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin":$PATH
+        - git clone https://github.com/giaf/blasfeo
+        - mkdir "${TRAVIS_BUILD_DIR}"/blasfeo/build
+        - cd "${TRAVIS_BUILD_DIR}"/blasfeo/build
+        - cmake -DTARGET=GENERIC ..
+        - MSBuild.exe blasfeo.vcxproj
+      script:
+        - export PATH="/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin":$PATH
+        - mkdir "${TRAVIS_BUILD_DIR}"/build
+        - cd "${TRAVIS_BUILD_DIR}"/build
+        - cmake -DTARGET=GENERIC ..
+        - MSBuild.exe hpipm.vcxproj
+
