--- a/.travis.yml
+++ b/.travis.yml
@@ -137,7 +137,7 @@ jobs:
         - git clone https://github.com/giaf/blasfeo
         - mkdir "${TRAVIS_BUILD_DIR}"/blasfeo/build
         - cd "${TRAVIS_BUILD_DIR}"/blasfeo/build
-        - cmake -DCMAKE_INSTALL_PREFIX="${TRAVIS_BUILD_DIR}" ..
+        - cmake -DCMAKE_INSTALL_PREFIX="${TRAVIS_BUILD_DIR}"/blasfeo ..
         - make -j 4
       script:
         - mkdir "${TRAVIS_BUILD_DIR}"/build
@@ -158,12 +158,14 @@ jobs:
         - git clone https://github.com/giaf/blasfeo
         - mkdir "${TRAVIS_BUILD_DIR}"/blasfeo/build
         - cd "${TRAVIS_BUILD_DIR}"/blasfeo/build
-        - cmake -DTARGET=GENERIC ..
+        - cmake -DTARGET=GENERIC -DCMAKE_INSTALL_PREFIX="${TRAVIS_BUILD_DIR}"/blasfeo ..
         - MSBuild.exe blasfeo.vcxproj
+        - ls
+        - MSBuild.exe INSTALL.vcxproj
       script:
         - export PATH="/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin":$PATH
         - mkdir "${TRAVIS_BUILD_DIR}"/build
         - cd "${TRAVIS_BUILD_DIR}"/build
-        - cmake -DTARGET=GENERIC ..
+        - cmake -DTARGET=GENERIC -DBLASFEO_PATH="${TRAVIS_BUILD_DIR}"/blasfeo ..
         - MSBuild.exe hpipm.vcxproj
 
