cmake: trying to append correct blasfeo lib extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,10 +98,18 @@ if(NOT TARGET blasfeo)
 
 	if(HPIPM_BLASFEO_LIB MATCHES "Static")
 		add_library(blasfeo STATIC IMPORTED)
-		set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.a)
+		if(CMAKE_C_COMPILER_ID MATCHES MSVC)
+			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.lib)
+		else()
+			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.a)
+		endif()
 	elseif(HPIPM_BLASFEO_LIB MATCHES "Shared")
 		add_library(blasfeo SHARED IMPORTED)
-		set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.so)
+		if(CMAKE_C_COMPILER_ID MATCHES MSVC)
+			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.dll)
+		else()
+			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.so)
+		endif()
 	endif()
 endif()
 
