--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,14 +99,14 @@ if(NOT TARGET blasfeo)
 	if(HPIPM_BLASFEO_LIB MATCHES "Static")
 		add_library(blasfeo STATIC IMPORTED)
 		if(CMAKE_C_COMPILER_ID MATCHES MSVC)
-			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.lib)
+			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/blasfeo.lib)
 		else()
 			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.a)
 		endif()
 	elseif(HPIPM_BLASFEO_LIB MATCHES "Shared")
 		add_library(blasfeo SHARED IMPORTED)
 		if(CMAKE_C_COMPILER_ID MATCHES MSVC)
-			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.dll)
+			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/blasfeo.dll)
 		else()
 			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.so)
 		endif()
