tests d_ocp_qp: add arg printing

--- a/.travis.yml
+++ b/.travis.yml
@@ -125,6 +125,7 @@ jobs:
 
   include:
     - name: "Linux AMD64 cmake build"
+      if: branch = windows_support
       arch: amd64
       os: linux
       dist: bionic
