--- a/.travis.yml
+++ b/.travis.yml
@@ -138,6 +138,7 @@ jobs:
         - cd "${TRAVIS_BUILD_DIR}"/blasfeo/build
         - cmake -DCMAKE_INSTALL_PREFIX="${TRAVIS_BUILD_DIR}"/blasfeo ..
         - make -j 4
+        - make install
       script:
         - mkdir "${TRAVIS_BUILD_DIR}"/build
         - cd "${TRAVIS_BUILD_DIR}"/build
