--- a/tree_ocp_qp/Makefile
+++ b/tree_ocp_qp/Makefile
@@ -53,6 +53,7 @@ OBJS += d_tree_ocp_qp_kkt.o
 OBJS += d_tree_ocp_qp_ipm.o
 OBJS += d_tree_ocp_qcqp_dim.o
 OBJS += d_tree_ocp_qcqp.o
+OBJS += d_tree_ocp_qcqp_sol.o
 # single
 OBJS += s_tree_ocp_qp_dim.o
 OBJS += s_tree_ocp_qp.o
@@ -62,6 +63,7 @@ OBJS += s_tree_ocp_qp_kkt.o
 OBJS += s_tree_ocp_qp_ipm.o
 OBJS += s_tree_ocp_qcqp_dim.o
 OBJS += s_tree_ocp_qcqp.o
+OBJS += s_tree_ocp_qcqp_sol.o
 
 obj: $(OBJS)
 
@@ -85,3 +87,5 @@ d_tree_ocp_qcqp_dim.o: d_tree_ocp_qcqp_dim.c x_tree_ocp_qcqp_dim.c
 s_tree_ocp_qcqp_dim.o: s_tree_ocp_qcqp_dim.c x_tree_ocp_qcqp_dim.c
 d_tree_ocp_qcqp.o: d_tree_ocp_qcqp.c x_tree_ocp_qcqp.c
 s_tree_ocp_qcqp.o: s_tree_ocp_qcqp.c x_tree_ocp_qcqp.c
+d_tree_ocp_qcqp_sol.o: d_tree_ocp_qcqp_sol.c x_tree_ocp_qcqp_sol.c
+s_tree_ocp_qcqp_sol.o: s_tree_ocp_qcqp_sol.c x_tree_ocp_qcqp_sol.c
