tree ocp qp: add res

--- a/tree_ocp_qp/Makefile
+++ b/tree_ocp_qp/Makefile
@@ -54,6 +54,7 @@ OBJS += d_tree_ocp_qp_ipm.o
 OBJS += d_tree_ocp_qcqp_dim.o
 OBJS += d_tree_ocp_qcqp.o
 OBJS += d_tree_ocp_qcqp_sol.o
+OBJS += d_tree_ocp_qcqp_res.o
 # single
 OBJS += s_tree_ocp_qp_dim.o
 OBJS += s_tree_ocp_qp.o
@@ -64,6 +65,7 @@ OBJS += s_tree_ocp_qp_ipm.o
 OBJS += s_tree_ocp_qcqp_dim.o
 OBJS += s_tree_ocp_qcqp.o
 OBJS += s_tree_ocp_qcqp_sol.o
+OBJS += s_tree_ocp_qcqp_res.o
 
 obj: $(OBJS)
 
@@ -89,3 +91,5 @@ d_tree_ocp_qcqp.o: d_tree_ocp_qcqp.c x_tree_ocp_qcqp.c
 s_tree_ocp_qcqp.o: s_tree_ocp_qcqp.c x_tree_ocp_qcqp.c
 d_tree_ocp_qcqp_sol.o: d_tree_ocp_qcqp_sol.c x_tree_ocp_qcqp_sol.c
 s_tree_ocp_qcqp_sol.o: s_tree_ocp_qcqp_sol.c x_tree_ocp_qcqp_sol.c
+d_tree_ocp_qcqp_res.o: d_tree_ocp_qcqp_res.c x_tree_ocp_qcqp_res.c
+s_tree_ocp_qcqp_res.o: s_tree_ocp_qcqp_res.c x_tree_ocp_qcqp_res.c
